feat: implement automatic initial codebook training
- Add automatic codebook training when 256+ vectors are inserted
- Train PQ codebooks using k-means clustering on initial vectors
- Store codebooks with versioning support
- Start LinkWorker after initial codebooks are trained
- Use vector sketches for training data sampling
- Add comprehensive tests for codebook training flow